# TieredVector

./: .gitignore  EVALUATION.md  README.md  requirements.txt  status.py
config/: cost.yaml  evaluation.yaml
cpp/: CMakeLists.txt
cpp/src/: http_server.cpp  http_server.hpp  main.cpp  storage_manager.cpp  storage_manager.hpp
go/rag-controller/: config.go  go.mod  main.go  ml_client.go
python/: ANSWERS.md  PREDICTION_README.md  RUN_EXPERIMENT.md  access_tracker.py  analyze_results.py  calc_cost.py  check_remote_storage.py  compare_costs.py  compare_results.py  data_loader.py  document_scorer.py  evaluate.py  load_dataset.py  load_eval_queries.py  load_queries.py  migration_manager.py  ml_service.py  prediction_demo.py  prediction_notes.txt  query_embeddings_cache.npz  query_embeddings_eval.npy  query_embeddings_eval_queries.json  query_logger.py  requirements.txt  sandbox.py  scoring_config.py  server.py  simulate_temperature.py  storage_manager.py  temperature_predictor.py  test_max_batch_size.py  test_prediction.py  tier_orchestrator.py  tier_results.npz  visualize_results.py
python/data/: evaluation_summary.txt  query_log_baseline.csv  query_log_baseline_cloud_th0.6.csv  query_log_baseline_cloud_th0.75.csv  query_log_baseline_cloud_th0.9.csv  query_log_tiered.csv  query_log_tiered_th0.6.csv  query_log_tiered_th0.75.csv  query_log_tiered_th0.9.csv
python/tier2_baseline_db/06f1b56a-cf85-4cde-9df9-327e101a0803/: index_metadata.pickle
python/tier2_baseline_db/aa599697-e7e5-4704-b236-faec1937546c/: index_metadata.pickle
(+1 files in other folders)
